service/tests/schemas/snapshots/orders/bad currency@orders.snap
---
source: tests/schemas/orders.rs
expression: result
---
Err(
    "Validation error: {\"currency\":\"Field error\"}",
)
