service/tests/schemas/snapshots/orders/empty order@orders.snap
---
source: tests/schemas/orders.rs
expression: result
---
Err(
    "Validation error: {\"items\":\"Field error\"}",
)
