service/tests/schemas/snapshots/orders/invalid address type@orders.snap
---
source: tests/schemas/orders.rs
expression: error
---
"Validation error: {\"address_type\":\"Field error\"}"
