service/tests/schemas/snapshots/orders/invalid country code@orders.snap
---
source: tests/schemas/orders.rs
expression: error
---
"Validation error: {\"country_code\":\"Field error\"}"
