service/tests/schemas/snapshots/orders/invalid email@orders.snap
---
source: tests/schemas/orders.rs
expression: error
---
"Validation error: {\"email\":\"Field error\"}"
