service/tests/schemas/snapshots/orders/negative grand total@orders.snap
---
source: tests/schemas/orders.rs
expression: result
---
Err(
    "Validation error: {\"grand_total\":\"Field error\"}",
)
