service/tests/schemas/snapshots/orders/negative subtotal@orders.snap
---
source: tests/schemas/orders.rs
expression: result
---
Err(
    "Validation error: {\"subtotal\":\"Field error\"}",
)
