service/tests/schemas/snapshots/orders/rejects_zero_order_detail_quantity@orders.snap
---
source: tests/schemas/orders.rs
expression: result
---
Err(
    "Validation error: {\"quantity\":\"Field error\"}",
)
