service/tests/schemas/snapshots/orders/zero item quantity@orders.snap
---
source: tests/schemas/orders.rs
expression: result
---
Err(
    "Validation error: {\"items[0].quantity\":\"Field error\"}",
)
